<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FormProdutos">

    <TextView
        android:id="@+id/title_cadastro_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_cadastro_produto"
        android:textColor="@color/white"
        android:textSize="42sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintTop_toBottomOf="@id/title_cadastro_produto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/edit_produto_nome"
        style="@style/Edit_text"
        android:hint="@string/text_produto_nome"
        android:inputType="text"
        android:maxLength="30"
        app:layout_constraintTop_toTopOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        />

    <EditText
        android:id="@+id/edit_produto_valor_custo"
        style="@style/Edit_text"
        android:hint="@string/text_produto_valor_custo"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/edit_produto_nome"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        />

    <EditText
        android:id="@+id/edit_produto_valor_venda"
        style="@style/Edit_text"
        android:hint="@string/text_produto_valor_venda"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/edit_produto_valor_custo"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cadastrar_produto"
        android:layout_marginTop="30dp"
        style="@style/Button"
        android:text="@string/bt_cadastro_produto"
        android:layout_marginBottom="60dp"
        app:layout_constraintTop_toBottomOf="@+id/containerComponents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>