<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormVenda">

    <TextView
        android:id="@+id/title_cadastro_venda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_cadastro_venda"
        android:textColor="@color/white"
        android:textSize="42sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintTop_toBottomOf="@id/title_cadastro_venda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/title_selecionar_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_selecionar_produto"
        android:textColor="@color/preto"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/containerComponents"
        />


    <Spinner
        android:id="@+id/select_produto"
        app:layout_constraintTop_toBottomOf="@id/title_selecionar_produto"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        style="@style/Spinner"
        android:drawableRight="@drawable/ic_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/quantidade_produto"
        style="@style/Edit_text"
        android:hint="@string/text_quantidade_produto"
        android:inputType="number"
        android:text="1"
        android:maxLength="10"
        app:layout_constraintTop_toBottomOf="@id/select_produto"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        />




    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cadastrar_venda"
        android:layout_marginTop="30dp"
        style="@style/Button"
        android:text="@string/bt_cadastro_produto"
        android:layout_marginBottom="60dp"
        app:layout_constraintTop_toBottomOf="@+id/containerComponents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>